package seedu.crypto1010.command;

import seedu.crypto1010.exceptions.Crypto1010Exception;
import seedu.crypto1010.model.Blockchain;

import java.util.Scanner;

public class ExitCommand extends Command {
    private static final String HELP_DESCRIPTION = """
            Format: exit
            Exits the program
            """;
    private static final String INVALID_FORMAT_ERROR = "Error: Invalid exit format. Use: exit";

    public ExitCommand() {
        super(HELP_DESCRIPTION);
    }

    @Override
    public void execute(Blockchain blockchain, Scanner in) throws Crypto1010Exception {
        System.out.println("Exiting Crypto1010...");
    }
}
